[tool.poetry]
name = "agt"
version = "0.1.0"
description = "AGT - AWS Glacier Tool"
authors = ["Oliver Nispel <oliver@nispel.org>"]
repository = "https://github.com/onispel/agt.git"
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities"
]
packages = [
    { include = "agt" },
]
keywords = ["aws", "glacier", "cli"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
boto3 = "^1.26.110"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-coverage = "^0.0"

[tool.poetry.scripts]
agt = "agt.main:main_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
